@@ -8,17 +8,17 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 
-import info.nightscout.androidaps.Config;
 import info.nightscout.androidaps.Constants;
 import info.nightscout.androidaps.MainApp;
 import info.nightscout.androidaps.R;
 import info.nightscout.androidaps.data.DetailedBolusInfo;
+import info.nightscout.androidaps.data.Intervals;
 import info.nightscout.androidaps.data.Iob;
 import info.nightscout.androidaps.data.IobTotal;
 import info.nightscout.androidaps.data.MealData;
-import info.nightscout.androidaps.data.Intervals;
 import info.nightscout.androidaps.data.NonOverlappingIntervals;
 import info.nightscout.androidaps.data.OverlappingIntervals;
 import info.nightscout.androidaps.data.Profile;
@@ -27,139 +27,127 @@ import info.nightscout.androidaps.db.ExtendedBolus;
 import info.nightscout.androidaps.db.ProfileSwitch;
 import info.nightscout.androidaps.db.TempTarget;
 import info.nightscout.androidaps.db.TemporaryBasal;
-import info.nightscout.androidaps.db.Treatment;
 import info.nightscout.androidaps.events.EventReloadProfileSwitchData;
 import info.nightscout.androidaps.events.EventReloadTempBasalData;
 import info.nightscout.androidaps.events.EventReloadTreatmentData;
 import info.nightscout.androidaps.events.EventTempTargetChange;
 import info.nightscout.androidaps.interfaces.PluginBase;
-import info.nightscout.androidaps.interfaces.PumpInterface;
+import info.nightscout.androidaps.interfaces.PluginDescription;
+import info.nightscout.androidaps.interfaces.PluginType;
 import info.nightscout.androidaps.interfaces.TreatmentsInterface;
+import info.nightscout.androidaps.plugins.ConfigBuilder.ConfigBuilderPlugin;
 import info.nightscout.androidaps.plugins.IobCobCalculator.AutosensData;
 import info.nightscout.androidaps.plugins.IobCobCalculator.IobCobCalculatorPlugin;
+import info.nightscout.androidaps.plugins.Overview.events.EventDismissNotification;
+import info.nightscout.androidaps.plugins.Overview.notifications.Notification;
+import info.nightscout.utils.DateUtil;
+import info.nightscout.utils.NSUpload;
 import info.nightscout.utils.SP;
+import info.nightscout.utils.T;
 
 /**
  * Created by mike on 05.08.2016.
  */
-public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
+public class TreatmentsPlugin extends PluginBase implements TreatmentsInterface {
     private static Logger log = LoggerFactory.getLogger(TreatmentsPlugin.class);
 
-    public static IobTotal lastTreatmentCalculation;
-    public static IobTotal lastTempBasalsCalculation;
+    private static TreatmentsPlugin treatmentsPlugin;
 
-    public static List<Treatment> treatments;
-    private static Intervals<TemporaryBasal> tempBasals = new NonOverlappingIntervals<TemporaryBasal>();
-    private static Intervals<ExtendedBolus> extendedBoluses = new NonOverlappingIntervals<ExtendedBolus>();
-    private static Intervals<TempTarget> tempTargets = new OverlappingIntervals<TempTarget>();
-    private static ProfileIntervals<ProfileSwitch> profiles = new ProfileIntervals<>();
-
-    private static boolean fragmentEnabled = true;
-    private static boolean fragmentVisible = true;
-
-    @Override
-    public String getFragmentClass() {
-        return TreatmentsFragment.class.getName();
+    public static TreatmentsPlugin getPlugin() {
+        if (treatmentsPlugin == null)
+            treatmentsPlugin = new TreatmentsPlugin();
+        return treatmentsPlugin;
     }
 
-    @Override
-    public String getName() {
-        return MainApp.instance().getString(R.string.treatments);
-    }
+    private TreatmentService service;
 
-    @Override
-    public String getNameShort() {
-        String name = MainApp.sResources.getString(R.string.treatments_shortname);
-        if (!name.trim().isEmpty()) {
-            //only if translation exists
-            return name;
-        }
-        // use long name as fallback
-        return getName();
-    }
+    private IobTotal lastTreatmentCalculation;
+    private IobTotal lastTempBasalsCalculation;
 
-    @Override
-    public boolean isEnabled(int type) {
-        return type == TREATMENT && fragmentEnabled;
-    }
-
-    @Override
-    public boolean isVisibleInTabs(int type) {
-        return type == TREATMENT && fragmentVisible;
-    }
-
-    @Override
-    public boolean canBeHidden(int type) {
-        return true;
-    }
-
-    @Override
-    public boolean hasFragment() {
-        return true;
-    }
-
-    @Override
-    public boolean showInList(int type) {
-        return !Config.NSCLIENT;
-    }
-
-    @Override
-    public void setFragmentEnabled(int type, boolean fragmentEnabled) {
-        if (type == TREATMENT) this.fragmentEnabled = fragmentEnabled;
-    }
-
-    @Override
-    public void setFragmentVisible(int type, boolean fragmentVisible) {
-        if (type == TREATMENT) this.fragmentVisible = fragmentVisible;
-    }
-
-    @Override
-    public int getType() {
-        return PluginBase.TREATMENT;
-    }
+    private final ArrayList<Treatment> treatments = new ArrayList<>();
+    private final Intervals<TemporaryBasal> tempBasals = new NonOverlappingIntervals<>();
+    private final Intervals<ExtendedBolus> extendedBoluses = new NonOverlappingIntervals<>();
+    private final Intervals<TempTarget> tempTargets = new OverlappingIntervals<>();
+    private final ProfileIntervals<ProfileSwitch> profiles = new ProfileIntervals<>();
 
     public TreatmentsPlugin() {
+        super(new PluginDescription()
+                .mainType(PluginType.TREATMENT)
+                .fragmentClass(TreatmentsFragment.class.getName())
+                .pluginName(R.string.treatments)
+                .shortName(R.string.treatments_shortname)
+                .preferencesId(R.xml.pref_absorption_oref0)
+                .alwaysEnabled(true)
+        );
+        this.service = new TreatmentService();
+    }
+
+    @Override
+    protected void onStart() {
         MainApp.bus().register(this);
         initializeTempBasalData();
         initializeTreatmentData();
         initializeExtendedBolusData();
         initializeTempTargetData();
         initializeProfileSwitchData();
+        super.onStart();
     }
 
-    public static void initializeTreatmentData() {
-        // Treatments
-        double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
+    @Override
+    protected void onStop() {
+        MainApp.bus().register(this);
+    }
+
+    public TreatmentService getService() {
+        return this.service;
+    }
+
+    private void initializeTreatmentData() {
+        double dia = Constants.defaultDIA;
+        if (MainApp.getConfigBuilder() != null && MainApp.getConfigBuilder().getProfile() != null)
+            dia = MainApp.getConfigBuilder().getProfile().getDia();
+        long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
+        synchronized (treatments) {
+            treatments.clear();
+            treatments.addAll(getService().getTreatmentDataFromTime(fromMills, false));
+        }
+    }
+
+    private void initializeTempBasalData() {
+        double dia = Constants.defaultDIA;
+        if (MainApp.getConfigBuilder() != null && MainApp.getConfigBuilder().getProfile() != null)
+            dia = MainApp.getConfigBuilder().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
 
-        treatments = MainApp.getDbHelper().getTreatmentDataFromTime(fromMills, false);
+        synchronized (tempBasals) {
+            tempBasals.reset().add(MainApp.getDbHelper().getTemporaryBasalsDataFromTime(fromMills, false));
+        }
+
     }
 
-    public static void initializeTempBasalData() {
-        // Treatments
-        double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
+    private void initializeExtendedBolusData() {
+        double dia = Constants.defaultDIA;
+        if (MainApp.getConfigBuilder() != null && MainApp.getConfigBuilder().getProfile() != null)
+            dia = MainApp.getConfigBuilder().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
 
-        tempBasals.reset().add(MainApp.getDbHelper().getTemporaryBasalsDataFromTime(fromMills, false));
+        synchronized (extendedBoluses) {
+            extendedBoluses.reset().add(MainApp.getDbHelper().getExtendedBolusDataFromTime(fromMills, false));
+        }
 
     }
 
-    public static void initializeExtendedBolusData() {
-        // Treatments
-        double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
-        long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
-
-        extendedBoluses.reset().add(MainApp.getDbHelper().getExtendedBolusDataFromTime(fromMills, false));
-
+    private void initializeTempTargetData() {
+        synchronized (tempTargets) {
+            long fromMills = System.currentTimeMillis() - 60 * 60 * 1000L * 24;
+            tempTargets.reset().add(MainApp.getDbHelper().getTemptargetsDataFromTime(fromMills, false));
+        }
     }
 
-    public void initializeTempTargetData() {
-        long fromMills = System.currentTimeMillis() - 60 * 60 * 1000L * 24;
-        tempTargets.reset().add(MainApp.getDbHelper().getTemptargetsDataFromTime(fromMills, false));
-    }
-
-    public void initializeProfileSwitchData() {
-        profiles.reset().add(MainApp.getDbHelper().getProfileSwitchData(false));
+    private void initializeProfileSwitchData() {
+        synchronized (profiles) {
+            profiles.reset().add(MainApp.getDbHelper().getProfileSwitchData(false));
+        }
     }
 
     @Override
@@ -177,27 +165,28 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
         double dia = profile.getDia();
 
-        for (Integer pos = 0; pos < treatments.size(); pos++) {
-            Treatment t = treatments.get(pos);
-            if (!t.isValid) continue;
-            if (t.date > time) continue;
-            Iob tIOB = t.iobCalc(time, dia);
-            total.iob += tIOB.iobContrib;
-            total.activity += tIOB.activityContrib;
-            if (!t.isSMB) {
-                // instead of dividing the DIA that only worked on the bilinear curves,
-                // multiply the time the treatment is seen active.
-                long timeSinceTreatment =  time - t.date;
-                long snoozeTime = t.date + (long)(timeSinceTreatment * SP.getDouble("openapsama_bolussnooze_dia_divisor", 2.0));
-                Iob bIOB = t.iobCalc(snoozeTime, dia);
-                total.bolussnooze += bIOB.iobContrib;
-            } else {
-                total.basaliob += t.insulin;
-                total.microBolusIOB += tIOB.iobContrib;
+        synchronized (treatments) {
+            for (Integer pos = 0; pos < treatments.size(); pos++) {
+                Treatment t = treatments.get(pos);
+                if (!t.isValid) continue;
+                if (t.date > time) continue;
+                Iob tIOB = t.iobCalc(time, dia);
+                total.iob += tIOB.iobContrib;
+                total.activity += tIOB.activityContrib;
+                if (t.date > total.lastBolusTime)
+                    total.lastBolusTime = t.date;
+                if (!t.isSMB) {
+                    // instead of dividing the DIA that only worked on the bilinear curves,
+                    // multiply the time the treatment is seen active.
+                    long timeSinceTreatment = time - t.date;
+                    long snoozeTime = t.date + (long) (timeSinceTreatment * SP.getDouble("openapsama_bolussnooze_dia_divisor", 2.0));
+                    Iob bIOB = t.iobCalc(snoozeTime, dia);
+                    total.bolussnooze += bIOB.iobContrib;
+                }
             }
         }
 
-        if (!MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses())
+        if (!ConfigBuilderPlugin.getActivePump().isFakingTempsByExtendedBoluses())
             synchronized (extendedBoluses) {
                 for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
                     ExtendedBolus e = extendedBoluses.get(pos);
@@ -211,9 +200,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public void updateTotalIOBTreatments() {
-        IobTotal total = getCalculationToTimeTreatments(System.currentTimeMillis());
-
-        lastTreatmentCalculation = total;
+        lastTreatmentCalculation = getCalculationToTimeTreatments(System.currentTimeMillis());
     }
 
     @Override
@@ -224,45 +211,69 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         if (profile == null) return result;
 
         long now = System.currentTimeMillis();
-        long dia_ago = now - (new Double(1.5d * profile.getDia() * 60 * 60 * 1000l)).longValue();
+        long dia_ago = now - (Double.valueOf(1.5d * profile.getDia() * T.hours(1).msecs())).longValue();
 
-        for (Treatment treatment : treatments) {
-            if (!treatment.isValid)
-                continue;
-            long t = treatment.date;
-            if (t > dia_ago && t <= now) {
-                if (treatment.carbs >= 1) {
-                    result.carbs += treatment.carbs;
-                }
-                if (treatment.insulin > 0 && treatment.mealBolus) {
-                    result.boluses += treatment.insulin;
+        synchronized (treatments) {
+            for (Treatment treatment : treatments) {
+                if (!treatment.isValid)
+                    continue;
+                long t = treatment.date;
+                if (t > dia_ago && t <= now) {
+                    if (treatment.carbs >= 1) {
+                        result.carbs += treatment.carbs;
+                        result.lastCarbTime = t;
+                    }
+                    if (treatment.insulin > 0 && treatment.mealBolus) {
+                        result.boluses += treatment.insulin;
+                    }
                 }
             }
         }
 
-        AutosensData autosensData = IobCobCalculatorPlugin.getLastAutosensData();
+        AutosensData autosensData = IobCobCalculatorPlugin.getPlugin().getLastAutosensDataSynchronized("getMealData()");
         if (autosensData != null) {
             result.mealCOB = autosensData.cob;
+            result.slopeFromMinDeviation = autosensData.slopeFromMinDeviation;
+            result.slopeFromMaxDeviation = autosensData.slopeFromMaxDeviation;
         }
+        result.lastBolusTime = getLastBolusTime();
         return result;
     }
 
     @Override
     public List<Treatment> getTreatmentsFromHistory() {
-        return treatments;
+        synchronized (treatments) {
+            return new ArrayList<>(treatments);
+        }
     }
 
     @Override
     public List<Treatment> getTreatments5MinBackFromHistory(long time) {
         List<Treatment> in5minback = new ArrayList<>();
-        for (Integer pos = 0; pos < treatments.size(); pos++) {
-            Treatment t = treatments.get(pos);
-            if (!t.isValid)
-                continue;
-            if (t.date <= time && t.date > time - 5 * 60 * 1000 && t.carbs > 0)
-                in5minback.add(t);
+        synchronized (treatments) {
+            for (Integer pos = 0; pos < treatments.size(); pos++) {
+                Treatment t = treatments.get(pos);
+                if (!t.isValid)
+                    continue;
+                if (t.date <= time && t.date > time - 5 * 60 * 1000 && t.carbs > 0)
+                    in5minback.add(t);
+            }
+            return in5minback;
         }
-        return in5minback;
+    }
+
+    @Override
+    public long getLastBolusTime() {
+        long now = System.currentTimeMillis();
+        long last = 0;
+        synchronized (treatments) {
+            for (Treatment t : treatments) {
+                if (t.date > last && t.insulin > 0 && t.isValid && t.date <= now)
+                    last = t.date;
+            }
+        }
+        log.debug("Last bolus time: " + new Date(last).toLocaleString());
+        return last;
     }
 
     @Override
@@ -272,7 +283,9 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public TemporaryBasal getRealTempBasalFromHistory(long time) {
-        return tempBasals.getValueByInterval(time);
+        synchronized (tempBasals) {
+            return tempBasals.getValueByInterval(time);
+        }
     }
 
     @Override
@@ -291,9 +304,11 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         initializeTreatmentData();
         initializeExtendedBolusData();
         updateTotalIOBTreatments();
+        MainApp.bus().post(ev.next);
     }
 
     @Subscribe
+    @SuppressWarnings("unused")
     public void onStatusEvent(final EventReloadTempBasalData ev) {
         log.debug("EventReloadTempBasalData");
         initializeTempBasalData();
@@ -306,18 +321,18 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
     }
 
     @Override
-    public IobTotal getCalculationToTimeTempBasals(long time) {
+    public IobTotal getCalculationToTimeTempBasals(long time, Profile profile) {
         IobTotal total = new IobTotal(time);
         synchronized (tempBasals) {
             for (Integer pos = 0; pos < tempBasals.size(); pos++) {
                 TemporaryBasal t = tempBasals.get(pos);
                 if (t.date > time) continue;
-                IobTotal calc = t.iobCalc(time);
+                IobTotal calc = t.iobCalc(time, profile);
                 //log.debug("BasalIOB " + new Date(time) + " >>> " + calc.basaliob);
                 total.plus(calc);
             }
         }
-        if (MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses()) {
+        if (ConfigBuilderPlugin.getActivePump().isFakingTempsByExtendedBoluses()) {
             IobTotal totalExt = new IobTotal(time);
             synchronized (extendedBoluses) {
                 for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
@@ -339,9 +354,9 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public void updateTotalIOBTempBasals() {
-        IobTotal total = getCalculationToTimeTempBasals(System.currentTimeMillis());
-
-        lastTempBasalsCalculation = total;
+        Profile profile = MainApp.getConfigBuilder().getProfile();
+        if (profile != null)
+            lastTempBasalsCalculation = getCalculationToTimeTempBasals(DateUtil.now(), profile);
     }
 
     @Nullable
@@ -351,66 +366,66 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         if (tb != null)
             return tb;
         ExtendedBolus eb = getExtendedBolusFromHistory(time);
-        if (eb != null && MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses())
+        if (eb != null && ConfigBuilderPlugin.getActivePump().isFakingTempsByExtendedBoluses())
             return new TemporaryBasal(eb);
         return null;
     }
 
     @Override
     public ExtendedBolus getExtendedBolusFromHistory(long time) {
-        return extendedBoluses.getValueByInterval(time);
+        synchronized (extendedBoluses) {
+            return extendedBoluses.getValueByInterval(time);
+        }
     }
 
     @Override
     public boolean addToHistoryExtendedBolus(ExtendedBolus extendedBolus) {
         //log.debug("Adding new ExtentedBolus record" + extendedBolus.log());
-        return MainApp.getDbHelper().createOrUpdate(extendedBolus);
+        boolean newRecordCreated = MainApp.getDbHelper().createOrUpdate(extendedBolus);
+        if (newRecordCreated) {
+            if (extendedBolus.durationInMinutes == 0) {
+                if (MainApp.getConfigBuilder().getActivePump().isFakingTempsByExtendedBoluses())
+                    NSUpload.uploadTempBasalEnd(extendedBolus.date, true, extendedBolus.pumpId);
+                else
+                    NSUpload.uploadExtendedBolusEnd(extendedBolus.date, extendedBolus.pumpId);
+            } else if (MainApp.getConfigBuilder().getActivePump().isFakingTempsByExtendedBoluses())
+                NSUpload.uploadTempBasalStartAbsolute(new TemporaryBasal(extendedBolus), extendedBolus.insulin);
+            else
+                NSUpload.uploadExtendedBolus(extendedBolus);
+        }
+        return newRecordCreated;
     }
 
     @Override
     public Intervals<ExtendedBolus> getExtendedBolusesFromHistory() {
-        return extendedBoluses;
-    }
-
-    @Override
-    public double getTempBasalAbsoluteRateHistory() {
-        PumpInterface pump = MainApp.getConfigBuilder();
-
-        TemporaryBasal tb = getTempBasalFromHistory(System.currentTimeMillis());
-        if (tb != null) {
-            if (tb.isFakeExtended){
-                double baseRate = pump.getBaseBasalRate();
-                double tempRate = baseRate + tb.netExtendedRate;
-                return tempRate;
-            } else if (tb.isAbsolute) {
-                return tb.absoluteRate;
-            } else {
-                double baseRate = pump.getBaseBasalRate();
-                double tempRate = baseRate * (tb.percentRate / 100d);
-                return tempRate;
-            }
+        synchronized (extendedBoluses) {
+            return new NonOverlappingIntervals<>(extendedBoluses);
         }
-        return 0;
-    }
-
-    @Override
-    public double getTempBasalRemainingMinutesFromHistory() {
-        if (isTempBasalInProgress())
-            return getTempBasalFromHistory(System.currentTimeMillis()).getPlannedRemainingMinutes();
-        return 0;
     }
 
     @Override
     public Intervals<TemporaryBasal> getTemporaryBasalsFromHistory() {
-        return tempBasals;
+        synchronized (tempBasals) {
+            return new NonOverlappingIntervals<>(tempBasals);
+        }
     }
 
     @Override
     public boolean addToHistoryTempBasal(TemporaryBasal tempBasal) {
         //log.debug("Adding new TemporaryBasal record" + tempBasal.toString());
-        return MainApp.getDbHelper().createOrUpdate(tempBasal);
+        boolean newRecordCreated = MainApp.getDbHelper().createOrUpdate(tempBasal);
+        if (newRecordCreated) {
+            if (tempBasal.durationInMinutes == 0)
+                NSUpload.uploadTempBasalEnd(tempBasal.date, false, tempBasal.pumpId);
+            else if (tempBasal.isAbsolute)
+                NSUpload.uploadTempBasalStartAbsolute(tempBasal, null);
+            else
+                NSUpload.uploadTempBasalStartPercent(tempBasal);
+        }
+        return newRecordCreated;
     }
 
+    // return true if new record is created
     @Override
     public boolean addToHistoryTreatment(DetailedBolusInfo detailedBolusInfo) {
         Treatment treatment = new Treatment();
@@ -424,7 +439,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
             treatment.carbs = detailedBolusInfo.carbs;
         treatment.source = detailedBolusInfo.source;
         treatment.mealBolus = treatment.carbs > 0;
-        boolean newRecordCreated = MainApp.getDbHelper().createOrUpdate(treatment);
+        boolean newRecordCreated = getService().createOrUpdate(treatment);
         //log.debug("Adding new Treatment record" + treatment.toString());
         if (detailedBolusInfo.carbTime != 0) {
             Treatment carbsTreatment = new Treatment();
@@ -433,9 +448,11 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
             carbsTreatment.date = detailedBolusInfo.date + detailedBolusInfo.carbTime * 60 * 1000L + 1000L; // add 1 sec to make them different records
             carbsTreatment.carbs = detailedBolusInfo.carbs;
             carbsTreatment.source = detailedBolusInfo.source;
-            MainApp.getDbHelper().createOrUpdate(carbsTreatment);
+            getService().createOrUpdate(carbsTreatment);
             //log.debug("Adding new Treatment record" + carbsTreatment);
         }
+        if (newRecordCreated && detailedBolusInfo.isValid)
+            NSUpload.uploadBolusWizardRecord(detailedBolusInfo);
         return newRecordCreated;
     }
 
@@ -460,6 +477,7 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     // TempTargets
     @Subscribe
+    @SuppressWarnings("unused")
     public void onStatusEvent(final EventTempTargetChange ev) {
         initializeTempTargetData();
     }
@@ -467,40 +485,53 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
     @Nullable
     @Override
     public TempTarget getTempTargetFromHistory() {
-        return tempTargets.getValueByInterval(System.currentTimeMillis());
+        synchronized (tempTargets) {
+            return tempTargets.getValueByInterval(System.currentTimeMillis());
+        }
     }
 
     @Nullable
     @Override
     public TempTarget getTempTargetFromHistory(long time) {
-        return tempTargets.getValueByInterval(time);
+        synchronized (tempTargets) {
+            return tempTargets.getValueByInterval(time);
+        }
     }
 
     @Override
     public Intervals<TempTarget> getTempTargetsFromHistory() {
-        return tempTargets;
+        synchronized (tempTargets) {
+            return new OverlappingIntervals<>(tempTargets);
+        }
     }
 
     // Profile Switch
     @Subscribe
+    @SuppressWarnings("unused")
     public void onStatusEvent(final EventReloadProfileSwitchData ev) {
         initializeProfileSwitchData();
     }
 
     @Override
     public ProfileSwitch getProfileSwitchFromHistory(long time) {
-        return (ProfileSwitch) profiles.getValueToTime(time);
+        synchronized (profiles) {
+            return (ProfileSwitch) profiles.getValueToTime(time);
+        }
     }
 
     @Override
     public ProfileIntervals<ProfileSwitch> getProfileSwitchesFromHistory() {
-        return profiles;
+        synchronized (profiles) {
+            return new ProfileIntervals<>(profiles);
+        }
     }
 
     @Override
     public void addToHistoryProfileSwitch(ProfileSwitch profileSwitch) {
         //log.debug("Adding new TemporaryBasal record" + profileSwitch.log());
+        MainApp.bus().post(new EventDismissNotification(Notification.PROFILE_SWITCH_MISSING));
         MainApp.getDbHelper().createOrUpdate(profileSwitch);
+        NSUpload.uploadProfileSwitch(profileSwitch);
     }
 
 
